--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@sentry/node": "^6.13.1",
     "@sentry/tracing": "^6.13.1",
     "ajv": "^6.12.6",
+    "ajv-errors": "^1.0.1",
     "angulartics2": "^10.0.0",
     "aws-sdk": "^2.833.0",
     "axios": "^0.21.1",
