--- a/lambdas/bulkUpload/serverless.yml
+++ b/lambdas/bulkUpload/serverless.yml
@@ -24,10 +24,8 @@ provider:
   name: aws
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
-
-# you can overwrite defaults here
-#  stage: dev
-region: eu-west-2
+  stage: dev
+  region: eu-west-2
 
 # you can add statements to the Lambda function's IAM Role here
 #  iam:
