techDebt(buRefactorTrainingLambda): Set up validateTraining lambda

--- a/lambdas/bulkUpload/serverless.yml
+++ b/lambdas/bulkUpload/serverless.yml
@@ -60,3 +60,5 @@ provider:
 functions:
   validateWorker:
     handler: handler.validateWorker
+  validateTraining:
+    handler: handler.validateTraining
