--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.1",
     "rate-limiter-flexible": "^1.3.2",
+    "redis": "^4.0.4",
     "request": "^2.88.2",
     "rxjs": "^6.6.7",
     "rxjs-compat": "^6.6.7",
@@ -107,6 +108,7 @@
     "sib-api-v3-sdk": "^8.2.1",
     "slugify": "^1.4.6",
     "sqreen": "^1.64.2",
+    "tedious": "^14.3.0",
     "text-encoding-utf-8": "^1.0.2",
     "toobusy-js": "^0.5.1",
     "tslib": "^2.0.0",
