Add a new bucket for every yml files

--- a/server/config/accessibility.yaml
+++ b/server/config/accessibility.yaml
@@ -32,9 +32,15 @@ bulkupload:
     region: eu-west-2
     bucketname: sfc-bulkupload-demo
 
+
+disbursement:
+    region: eu-west-2
+    bucketname: wdf-disbursement-demo
+
 locks:
     region: eu-west-1
     bucketname: sfc-locks-demo
+
 
 public:
     download:
