--- a/server/config/benchmarks.yaml
+++ b/server/config/benchmarks.yaml
@@ -32,6 +32,10 @@ bulkupload:
     lambda:
         stage: sfcbenchmarks
 
+disbursement:
+    region: eu-west-2
+    bucketname: wdf-disbursement-dev
+
 locks:
     region: eu-west-1
     bucketname: sfc-locks-dev
