--- a/server/config/development.yaml
+++ b/server/config/development.yaml
@@ -31,6 +31,10 @@ bulkupload:
   completion:
     timeout: 180
 
+disbursement:
+    region: eu-west-2
+    bucketname: wdf-disbursement-dev
+
 locks:
   region: eu-west-1
   bucketname: sfc-locks-dev
