--- a/server/config/preproduction.yaml
+++ b/server/config/preproduction.yaml
@@ -40,6 +40,10 @@ bulkupload:
   lambda:
     stage: sfcpreprod
 
+ disbursement:
+    region: eu-west-2
+    bucketname: wdf-disbursement-preprod
+
 locks:
   region: eu-west-1
   bucketname: sfc-locks-preprod
