updates circle ci deployment config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -578,13 +578,13 @@ workflows:
           appname: sfcbenchmarks
           env_prefix: SFC_BENCHMARKS
           requires:
-            - test_frontend
-            - test_backend
-            - performance
+            - prod_deploy
           filters:
             branches:
               only:
-                - feat/benchmarks
+                - live
+            tags:
+              only: /^v[0-9]+(\.[0-9]+)*$/
           endpoint: https://api.cloud.service.gov.uk
           org: dhsc-skills-for-care-nmds-sc-2
           space: sandbox
@@ -715,7 +715,10 @@ workflows:
           filters:
             branches:
               only:
-                - feat/benchmarks
+                - live
+            tags:
+              only:
+                - /^v[0-9]+(\.[0-9]+)*$/
           env: development
       - sentry_release:
           requires:
