--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -276,7 +276,7 @@ jobs:
     description: Execute a blue/green deploy  in a single job. Expects either build_steps
       or workspace_path for assets to deploy.
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     parameters:
       appname:
         description: App Name
@@ -407,7 +407,7 @@ jobs:
   attach_autoscale_policy:
     description: Attach an auto scaling policy
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     parameters:
       appname:
         description: App Name
@@ -476,7 +476,7 @@ jobs:
   serverless_deployment:
     description: Deploying all lambdas
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     parameters:
       appname:
         description: App Name
