--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -245,7 +245,8 @@ jobs:
       - attach_workspace:
           at: .
       - run:
-          command: npm install -g @lhci/cli@0.9.0
+          command: npm install -g @lhci/cli@latest
+      - run:
           command: lhci autorun
   feature_flag:
     description: Checks for redundant feature flags
