--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -242,10 +242,16 @@ jobs:
     docker:
       - image: cimg/node:12.19.0-browsers
     steps:
+      - checkout
       - attach_workspace:
           at: .
+      - restore_cache:
+          keys:
+            - node-deps-v2-{{ checksum "package-lock.json" }}
       - run:
           command: sudo npm install -g @lhci/cli@latest
+      - run:
+          command: sudo npm install -g puppeteer@latest
       - run:
           command: lhci autorun
   feature_flag:
