--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,11 +249,7 @@ jobs:
           keys:
             - node-deps-v2-{{ checksum "package-lock.json" }}
       - run:
-          command: sudo npm install -g @lhci/cli@latest
-      - run:
-          command: sudo npm install -g puppeteer@latest
-      - run:
-          command: lhci autorun
+          command: $(npm bin)/lhci autorun
   feature_flag:
     description: Checks for redundant feature flags
     docker:
