--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "@angular-eslint/template-parser": "1.2.0",
     "@angular/language-service": "^12.2.11",
     "@jackfranklin/test-data-bot": "^1.3.0",
+    "@lhci/cli": "^0.9.0",
     "@ngx-builders/analyze": "^2.3.0",
     "@testing-library/angular": "^10.10.0",
     "@testing-library/dom": "^7.31.0",
