add lhci script to package.json, call in circle ci config.yml

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "db:migration:generate": "sequelize migration:generate",
     "db:migrate": "sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo",
-    "cf:migrate": "node ./bin/cf-migrate.js"
+    "cf:migrate": "node ./bin/cf-migrate.js",
+    "lhci": "lhci autorun"
   },
   "private": true,
   "dependencies": {
