--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -249,7 +249,9 @@ jobs:
           keys:
             - node-deps-v2-{{ checksum "package-lock.json" }}
       - run:
-          command: $(npm bin)/lhci autorun
+          name: lhci autorun
+          command: |
+            npm run lhci
   feature_flag:
     description: Checks for redundant feature flags
     docker:
