remove lhci script from package.json, and revert config.yml back

--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "db:migration:generate": "sequelize migration:generate",
     "db:migrate": "sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo",
-    "cf:migrate": "node ./bin/cf-migrate.js",
-    "lhci": "lhci autorun"
+    "cf:migrate": "node ./bin/cf-migrate.js"
   },
   "private": true,
   "dependencies": {
