--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -247,12 +247,9 @@ jobs:
           at: .
       - restore_cache:
           keys:
-            - node-deps-v2-{{ checksum "package-lock.json" }}-{{ .Environment.CACHE_VERSION }}
-            - node-deps-v2-{{ .Environment.CACHE_VERSION }}
+            - node-deps-v2-{{ checksum "package-lock.json" }}
       - run:
-          name: lhci autorun
-          command: |
-            npm run lhci
+          command: $(npm bin)/lhci autorun
   feature_flag:
     description: Checks for redundant feature flags
     docker:
