--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,6 +68,21 @@ commands:
                 cf set-env "<<parameters.appname>>-dark" SQREEN_TOKEN "${<<parameters.env_prefix>>_SQREEN_TOKEN}"
             fi
 
+            if [ -n "${<<parameters.env_prefix>>_DISBURSEMENT_DB_HOST}" ]; then
+                cf set-env "<<parameters.appname>>-dark" DISBURSEMENT_DB_HOST "${<<parameters.env_prefix>>_DISBURSEMENT_DB_HOST}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_DISBURSEMENT_DB_USER_NAME}" ]; then
+                cf set-env "<<parameters.appname>>-dark" DISBURSEMENT_DB_USER_NAME "${<<parameters.env_prefix>>_DISBURSEMENT_DB_USER_NAME}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_DISBURSEMENT_DB_PASS}" ]; then
+                cf set-env "<<parameters.appname>>-dark" DISBURSEMENT_DB_PASS "${<<parameters.env_prefix>>_DISBURSEMENT_DB_PASS}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_REDIS_SERVICE_NAME}" ]; then
+                cf set-env "<<parameters.appname>>-dark" REDIS_SERVICE_NAME "${<<parameters.env_prefix>>_REDIS_SERVICE_NAME}"
+            fi
             # Push as "dark" instance (URL in manifest)
             cf start "<<parameters.appname>>-dark"
             # Ensure dark route is exclusive to dark app
@@ -744,3 +759,5 @@ workflows:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*$/
           env: production
+
+
