--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,6 +83,7 @@ commands:
             if [ -n "${<<parameters.env_prefix>>_REDIS_SERVICE_NAME}" ]; then
                 cf set-env "<<parameters.appname>>-dark" REDIS_SERVICE_NAME "${<<parameters.env_prefix>>_REDIS_SERVICE_NAME}"
             fi
+
             # Push as "dark" instance (URL in manifest)
             cf start "<<parameters.appname>>-dark"
             # Ensure dark route is exclusive to dark app
@@ -168,7 +169,7 @@ commands:
             npx serverless deploy --stage <<parameters.appname>>
 
 orbs:
-  node: circleci/node@3.0.0
+  node: circleci/node@5.0.0
   slack: circleci/slack@4.4.4
   codecov: codecov/codecov@1.0.2
 
@@ -177,7 +178,7 @@ jobs:
     resource_class: large
     working_directory: ~/project
     docker:
-      - image: circleci/node:12.19.0-browsers
+      - image: cimg/node:12.19.0-browsers
     environment: NODE_OPTIONS=--max_old_space_size=8192
     steps:
       - checkout
@@ -209,14 +210,12 @@ jobs:
   test_frontend:
     resource_class: large
     docker:
-      - image: circleci/node:12.19.0-browsers
+      - image: cimg/node:12.19.0-browsers
     steps:
       - checkout
       - restore_cache:
           keys:
             - node-deps-v2-{{ checksum "package-lock.json" }}
-      - run:
-          command: sudo apt-get install -yq libxss1
       - run:
           command: npm run test-headless
           environment:
@@ -234,7 +233,7 @@ jobs:
           flags: frontend
   test_backend:
     docker:
-      - image: circleci/node:12.19.0-browsers
+      - image: cimg/node:12.19.0-browsers
     steps:
       - checkout
       - restore_cache:
@@ -291,7 +290,7 @@ jobs:
     description: Execute a blue/green deploy  in a single job. Expects either build_steps
       or workspace_path for assets to deploy.
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     parameters:
       appname:
         description: App Name
@@ -422,7 +421,7 @@ jobs:
   attach_autoscale_policy:
     description: Attach an auto scaling policy
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     parameters:
       appname:
         description: App Name
@@ -465,7 +464,7 @@ jobs:
           steps: << parameters.validate_steps >>
   sentry_release:
     docker:
-      - image: circleci/node:12.19.0-browsers
+      - image: cimg/node:12.19.0-browsers
     environment:
       SENTRY_ORG: skills-for-care
       SENTRY_PROJECT: skills-for-care
@@ -491,7 +490,7 @@ jobs:
   serverless_deployment:
     description: Deploying all lambdas
     docker:
-      - image: circleci/node:lts
+      - image: cimg/node:lts
     parameters:
       appname:
         description: App Name
@@ -593,12 +592,13 @@ workflows:
           appname: sfcbenchmarks
           env_prefix: SFC_BENCHMARKS
           requires:
-            - prod_deploy
+            - test_frontend
+            - test_backend
+            - performance
           filters:
             branches:
-              ignore: /.*/
-            tags:
-              only: /^v[0-9]+(\.[0-9]+)*$/
+              only:
+                - feat/benchmarks
           endpoint: https://api.cloud.service.gov.uk
           org: dhsc-skills-for-care-nmds-sc-2
           space: sandbox
@@ -728,10 +728,8 @@ workflows:
             - blue_green_benchmarks
           filters:
             branches:
-              ignore: /.*/
-            tags:
               only:
-                - /^v[0-9]+(\.[0-9]+)*$/
+                - feat/benchmarks
           env: development
       - sentry_release:
           requires:
@@ -760,5 +758,3 @@ workflows:
             tags:
               only: /^v[0-9]+(\.[0-9]+)*$/
           env: production
-
-
