--- a/manifest.prod.yml
+++ b/manifest.prod.yml
@@ -3,7 +3,7 @@ applications:
     memory: 8G
     disk_quota: 4GB
     instances: 10
-    buildpack: https://github.com/cloudfoundry/nodejs-buildpack.git#v1.7.45
+    buildpack: https://github.com/cloudfoundry/nodejs-buildpack.git
     services:
       - sfcuatdb01
       - scale-sfcprod
