--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "bcrypt-nodejs": "0.0.3",
     "canvg": "^3.0.7",
     "celebrate": "^13.0.4",
+    "cfenv": "^1.2.4",
     "cheerio": "1.0.0-rc.3",
     "compression": "^1.7.4",
     "configcat-js": "^5.5.0",
