--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "convict-format-with-validator": "^6.2.0",
     "cookie-parser": "^1.4.5",
     "core-js": "^3.9.0",
+    "csv-parse": "^5.0.4",
     "csvtojson": "^2.0.10",
     "dayjs": "^1.10.7",
     "details-element-polyfill": "^2.4.0",
@@ -88,6 +89,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.33",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "ngx-dropzone": "^2.3.0",
     "notifications-node-client": "^5.1.0",
     "openpgp": "^5.0.0-1",
