--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "api:server": "nodemon --inspect server.js",
     "server": "npm-run-all -p -l build:watch api:server",
     "server:test": "mocha server/test/**/*.spec.js",
+    "server:test:e2e": "cypress run",
+    "server:test:e2e:open": "cypress open",
     "server:test:unit": "mocha --exit 'server/test/unit/**/*.spec.js'",
     "lambda:test:unit": "mocha --exit lambdas/**/*.spec.js",
     "server:test:unit:ci": "mocha --reporter mocha-junit-reporter --exit 'server/test/unit/**/*.spec.js'",
@@ -29,7 +31,8 @@
     "db:migration:generate": "sequelize migration:generate",
     "db:migrate": "sequelize db:migrate",
     "db:migrate:undo": "sequelize db:migrate:undo",
-    "cf:migrate": "node ./bin/cf-migrate.js"
+    "cf:migrate": "node ./bin/cf-migrate.js",
+    "test:server": "NODE_ENV=test npm run server"
   },
   "private": true,
   "dependencies": {
@@ -152,6 +155,7 @@
     "aws-sdk-mock": "^5.2.1",
     "chai": "^4.3.0",
     "codelyzer": "^6.0.2",
+    "cypress": "^9.6.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^7.2.0",
     "faker": "^5.5.3",
