--- a/lambdas/bulkUpload/package.json
+++ b/lambdas/bulkUpload/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/**/*.spec.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.21",
     "moment": "^2.29.1"
+  },
+  "devDependencies": {
+    "chai": "^4.3.6",
+    "mocha": "^10.0.0"
   }
 }
