--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@sentry/tracing": "^6.13.1",
     "ajv-errors": "^1.0.1",
     "angulartics2": "^10.0.0",
-    "aws-sdk": "^2.833.0",
+    "aws-sdk": "^2.1243.0",
     "axios": "^0.21.1",
     "bcrypt-nodejs": "0.0.3",
     "canvg": "^3.0.7",
@@ -91,11 +91,14 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "ngx-dropzone": "^2.3.0",
+    "node-fetch": "^3.2.10",
     "notifications-node-client": "^5.1.1",
     "openpgp": "^5.0.0-1",
     "p-ratelimit": "^1.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "path": "^0.12.7",
+    "pdf-lib": "^1.17.1",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.4",
     "pug": "^3.0.1",
