add setting of more env variables in cf

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,6 +64,62 @@ commands:
                 cf set-env "<<parameters.appname>>-dark" REDIS_SERVICE_NAME "${<<parameters.env_prefix>>_REDIS_SERVICE_NAME}"
             fi
 
+            if [ -n "${<<parameters.env_prefix>>_SLACK_URL}" ]; then
+                cf set-env "<<parameters.appname>>-dark" SLACK_URL "${<<parameters.env_prefix>>_SLACK_URL}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_TOKEN_SECRET}" ]; then
+                cf set-env "<<parameters.appname>>-dark" TOKEN_SECRET "${<<parameters.env_prefix>>_TOKEN_SECRET}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_NOTIFY_KEY}" ]; then
+                cf set-env "<<parameters.appname>>-dark" NOTIFY_KEY "${<<parameters.env_prefix>>_NOTIFY_KEY}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_ADMIN_URL}" ]; then
+                cf set-env "<<parameters.appname>>-dark" ADMIN_URL "${<<parameters.env_prefix>>_ADMIN_URL}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_HONEYCOMB_WRITE_KEY}" ]; then
+                cf set-env "<<parameters.appname>>-dark" HONEYCOMB_WRITE_KEY "${<<parameters.env_prefix>>_HONEYCOMB_WRITE_KEY}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_TOKEN_ISS}" ]; then
+                cf set-env "<<parameters.appname>>-dark" TOKEN_ISS "${<<parameters.env_prefix>>_TOKEN_ISS}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_GET_ADDRESS}" ]; then
+                cf set-env "<<parameters.appname>>-dark" GET_ADDRESS "${<<parameters.env_prefix>>_GET_ADDRESS}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_SEND_IN_BLUE_KEY}" ]; then
+                cf set-env "<<parameters.appname>>-dark" SEND_IN_BLUE_KEY "${<<parameters.env_prefix>>_SEND_IN_BLUE_KEY}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_SEND_IN_BLUE_WHITELIST}" ]; then
+                cf set-env "<<parameters.appname>>-dark" SEND_IN_BLUE_WHITELIST "${<<parameters.env_prefix>>_SEND_IN_BLUE_WHITELIST}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_ENCRYPTION_PRIVATE_KEY}" ]; then
+                cf set-env "<<parameters.appname>>-dark" ENCRYPTION_PRIVATE_KEY "${<<parameters.env_prefix>>_ENCRYPTION_PRIVATE_KEY}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_ENCRYPTION_PUBLIC_KEY}" ]; then
+                cf set-env "<<parameters.appname>>-dark" ENCRYPTION_PUBLIC_KEY "${<<parameters.env_prefix>>_ENCRYPTION_PUBLIC_KEY}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_ENCRYPTION_PASSPHRASE}" ]; then
+                cf set-env "<<parameters.appname>>-dark" ENCRYPTION_PASSPHRASE "${<<parameters.env_prefix>>_ENCRYPTION_PASSPHRASE}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_ENCRYPTION_REVOKE_CERT}" ]; then
+                cf set-env "<<parameters.appname>>-dark" ENCRYPTION_REVOKE_CERT "${<<parameters.env_prefix>>_ENCRYPTION_REVOKE_CERT}"
+            fi
+
+            if [ -n "${<<parameters.env_prefix>>_SEND_EMAILS_SQS_QUEUE}" ]; then
+                cf set-env "<<parameters.appname>>-dark" SEND_EMAILS_SQS_QUEUE "${<<parameters.env_prefix>>_SEND_EMAILS_SQS_QUEUE}"
+            fi
+
             # Push as "dark" instance (URL in manifest)
             cf start "<<parameters.appname>>-dark"
             # Ensure dark route is exclusive to dark app
