config changes for certificates bucket

--- a/server/config/preproduction.yaml
+++ b/server/config/preproduction.yaml
@@ -40,6 +40,10 @@ bulkupload:
   lambda:
     stage: sfcpreprod
 
+certificate:
+  region: eu-west-2
+  bucketname: sfc-public-preprod
+
 disbursement:
   region: eu-west-2
   bucketname: wdf-disbursement-preprod
