consolidate all t and q components into the training and qualifications folder, leave routing as it was

--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,8 @@ CQCLocationAPICall/.nyc_output/
 test-results.xml
 
 TESTS.xml
+
+#Cypress to ignore
+cypress/screenshots
+cypress/videos
+cypress/fixtures
