add docker file for creating test database

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@ testem.log
 /oldtest
 TESTS.xml
 *.csv
+.env
 
 # System Files
 .DS_Store
@@ -74,3 +75,5 @@ TESTS.xml
 cypress/screenshots
 cypress/videos
 cypress/fixtures
+
+docker/*.sql
