fix search not working correctly on training call

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ testem.log
 /oldtest
 TESTS.xml
 *.csv
+.env
 
 # System Files
 .DS_Store
@@ -73,3 +74,5 @@ TESTS.xml
 cypress/screenshots
 cypress/videos
 cypress/fixtures
+
+docker/*.sql
