--- a/package.json
+++ b/package.json
@@ -33,23 +33,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~12.2.11",
+    "@angular/animations": "~13.3.12",
     "@angular/cdk": "^12.2.11",
-    "@angular/cli": "~12.2.11",
-    "@angular/common": "~12.2.11",
-    "@angular/compiler": "~12.2.11",
-    "@angular/compiler-cli": "^12.2.11",
-    "@angular/core": "~12.2.11",
-    "@angular/forms": "~12.2.11",
-    "@angular/platform-browser": "~12.2.11",
-    "@angular/platform-browser-dynamic": "~12.2.11",
-    "@angular/router": "~12.2.11",
+    "@angular/cli": "~13.3.11",
+    "@angular/common": "~13.3.12",
+    "@angular/compiler": "~13.3.12",
+    "@angular/compiler-cli": "^13.3.12",
+    "@angular/core": "~13.3.12",
+    "@angular/forms": "~13.3.12",
+    "@angular/platform-browser": "~13.3.12",
+    "@angular/platform-browser-dynamic": "~13.3.12",
+    "@angular/router": "~13.3.12",
     "@auth0/angular-jwt": "^5.0.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@sentry/browser": "^6.13.1",
     "@sentry/integrations": "^6.13.1",
     "@sentry/node": "^6.13.1",
     "@sentry/tracing": "^6.13.1",
+    "@types/offscreencanvas": "^2019.7.0",
     "ajv-errors": "^1.0.1",
     "angulartics2": "^10.0.0",
     "aws-sdk": "^2.833.0",
@@ -113,7 +114,7 @@
     "text-encoding-utf-8": "^1.0.2",
     "toobusy-js": "^0.5.1",
     "tslib": "^2.0.0",
-    "typescript": "^4.3.5",
+    "typescript": "^4.6.4",
     "ua-parser-js": "^0.7.28",
     "url-parse": "^1.4.7",
     "util": "^0.12.4",
@@ -125,13 +126,13 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^12.1.3",
-    "@angular-devkit/build-angular": "^12.2.11",
+    "@angular-devkit/build-angular": "^13.3.11",
     "@angular-eslint/builder": "1.2.0",
     "@angular-eslint/eslint-plugin": "1.2.0",
     "@angular-eslint/eslint-plugin-template": "^1.2.0",
     "@angular-eslint/schematics": "^1.2.0",
     "@angular-eslint/template-parser": "1.2.0",
-    "@angular/language-service": "^12.2.11",
+    "@angular/language-service": "^13.3.12",
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@lhci/cli": "^0.7.0",
     "@ngx-builders/analyze": "^2.3.0",
