--- a/angular.json
+++ b/angular.json
@@ -152,13 +152,7 @@
             "styles": ["src/styles.scss"],
             "scripts": [],
             "assets": ["src/favicon.ico", "src/assets"],
-            "sourceMap": false,
-            "customWebpackConfig": {
-              "path": "./testing-webpack.config.js",
-              "mergeRules": {
-                "externals": "replace"
-              }
-            }
+            "sourceMap": false
           }
         },
         "analyze": {
