--- a/angular.json
+++ b/angular.json
@@ -152,7 +152,13 @@
             "styles": ["src/styles.scss"],
             "scripts": [],
             "assets": ["src/favicon.ico", "src/assets"],
-            "sourceMap": false
+            "sourceMap": false,
+            "customWebpackConfig": {
+              "path": "./testing-webpack.config.js",
+              "mergeRules": {
+                "externals": "replace"
+              }
+            }
           }
         },
         "analyze": {
