--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^12.1.3",
-    "@angular-devkit/build-angular": "~13.2.5",
+    "@angular-devkit/build-angular": "^13.3.11",
     "@angular-eslint/builder": "1.2.0",
     "@angular-eslint/eslint-plugin": "1.2.0",
     "@angular-eslint/eslint-plugin-template": "^1.2.0",
