upgrade to angular 14

--- a/package.json
+++ b/package.json
@@ -33,17 +33,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.12",
+    "@angular/animations": "^14.3.0",
     "@angular/cdk": "^12.2.11",
-    "@angular/cli": "~13.3.11",
-    "@angular/common": "~13.3.12",
-    "@angular/compiler": "~13.3.12",
-    "@angular/compiler-cli": "^13.3.12",
-    "@angular/core": "~13.3.12",
-    "@angular/forms": "~13.3.12",
-    "@angular/platform-browser": "~13.3.12",
-    "@angular/platform-browser-dynamic": "~13.3.12",
-    "@angular/router": "~13.3.12",
+    "@angular/cli": "^14.2.11",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/compiler-cli": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@auth0/angular-jwt": "^5.0.2",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@sentry/browser": "^6.13.1",
@@ -126,13 +126,13 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "^13.1.0",
-    "@angular-devkit/build-angular": "^13.3.11",
+    "@angular-devkit/build-angular": "^14.2.11",
     "@angular-eslint/builder": "1.2.0",
     "@angular-eslint/eslint-plugin": "1.2.0",
     "@angular-eslint/eslint-plugin-template": "^1.2.0",
     "@angular-eslint/schematics": "^1.2.0",
     "@angular-eslint/template-parser": "1.2.0",
-    "@angular/language-service": "^13.3.12",
+    "@angular/language-service": "^14.3.0",
     "@jackfranklin/test-data-bot": "^1.3.0",
     "@lhci/cli": "^0.7.0",
     "@ngx-builders/analyze": "^2.3.0",
