--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,7 +158,7 @@ jobs:
     resource_class: large
     working_directory: ~/project
     docker:
-      - image: cimg/node:12.20.0-browsers
+      - image: cimg/node:v14.15.0-browsers
     environment: NODE_OPTIONS=--max_old_space_size=8192
     steps:
       - checkout
@@ -190,7 +190,7 @@ jobs:
   test_frontend:
     resource_class: large
     docker:
-      - image: cimg/node:12.20.0-browsers
+      - image: cimg/node:v14.15.0-browsers
     steps:
       - checkout
       - restore_cache:
