--- a/angular.json
+++ b/angular.json
@@ -33,6 +33,9 @@
               }
             ],
             "styles": ["./src/styles.scss"],
+            "stylePreprocessorOptions": {
+              "includePaths": ["./node_modules"]
+            },
             "allowedCommonJsDependencies": [
               "@babel",
               "raf",
