--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@angular/platform-browser-dynamic": "^14.3.0",
     "@angular/router": "^14.3.0",
     "@auth0/angular-jwt": "^5.0.2",
+    "@babel/runtime": "^7.21.0",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@sentry/browser": "^6.13.1",
     "@sentry/integrations": "^6.13.1",
